--- a/resources/sass/frontend/_news.scss
+++ b/resources/sass/frontend/_news.scss
@@ -82,6 +82,7 @@
                 }
                 .newsTitle {
                     font-size: 1.5rem;
+                    font-weight: bold;
                     letter-spacing: 4px;
                     @media (max-width: 991px) {
                         font-size: 1.2rem;
