--- a/resources/sass/frontend/donors/show.scss
+++ b/resources/sass/frontend/donors/show.scss
@@ -23,6 +23,7 @@
             padding: 110px 60px;
             .title-rows {
                 font-size: 1.3rem;
+                color: $brown;
                 font-weight: bold;
                 margin-bottom: 55px;
             }
