--- a/resources/sass/frontend/freebooks/index.scss
+++ b/resources/sass/frontend/freebooks/index.scss
@@ -1,14 +1,13 @@
 @import "../variables";
 @import "../contents";
 @import "../filter";
-
-.filter-row{
+.filter-row {
     margin-bottom: 25px;
 }
 
 .pd-25 {
     padding-right: 25px;
-    @media (max-width: 575px){
+    @media (max-width: 575px) {
         padding: 0px;
     }
 }
@@ -16,15 +15,16 @@
 .freebook-container {
     .freebook-card {
         width: calc(100%);
+        height: 365px;
         margin-bottom: 40px;
         border: 1px solid $blue;
         border-radius: 10px;
         position: relative;
-        @media (max-width: 429px){
+        @media (max-width: 429px) {
             border-radius: 8px;
             margin-bottom: 30px;
         }
-        @media (max-width: 350px){
+        @media (max-width: 350px) {
             border-radius: 5px;
             margin-bottom: 15px;
         }
@@ -33,7 +33,7 @@
             width: 100%;
             height: 100%;
             padding: 30px 20px 30px 10px;
-            @media (max-width: 429px){
+            @media (max-width: 429px) {
                 padding: 10px;
             }
             .freebook-cover-image {
@@ -44,16 +44,16 @@
                 img {
                     width: 85%;
                     box-shadow: 4px 5px 7px 2px rgba(0, 0, 0, 0.2);
-                    @media (max-width: 1199px){
+                    @media (max-width: 1199px) {
                         width: 50%;
                     }
-                    @media (max-width: 991px){
+                    @media (max-width: 991px) {
                         width: 70%;
                     }
-                    @media (max-width: 767px){
+                    @media (max-width: 767px) {
                         width: 75%;
                     }
-                    @media (max-width: 429px){
+                    @media (max-width: 429px) {
                         box-shadow: 2px 3px 7px 2px rgba(0, 0, 0, 0.2);
                     }
                 }
@@ -63,28 +63,28 @@
                 width: 50%;
                 color: $brown;
                 padding-left: 10px;
-                @media (max-width: 350px){
+                @media (max-width: 350px) {
                     padding-left: 0px;
                 }
                 .freebook-title {
                     margin-bottom: 15px;
                     border-bottom: 3px solid $pink;
-                    @media (max-width: 767px){
+                    @media (max-width: 767px) {
                         margin-bottom: 10px;
                     }
                     h4 {
                         font-weight: bold;
                         font-size: 1.3rem;
                         line-height: 2rem;
-                        @media (max-width: 767px){
+                        @media (max-width: 767px) {
                             font-size: 1.3rem;
                             line-height: 1.5rem;
                         }
-                        @media (max-width: 575px){
+                        @media (max-width: 575px) {
                             font-size: 1rem;
                             line-height: 1.2rem;
                         }
-                        @media (max-width: 350px){
+                        @media (max-width: 350px) {
                             font-size: 0.6rem;
                             line-height: 1rem;
                         }
@@ -94,11 +94,11 @@
                     display: block;
                     font-size: 0.9rem;
                     margin-bottom: 5px;
-                    @media (max-width: 575px){
+                    @media (max-width: 575px) {
                         font-size: 0.6rem;
                         margin-bottom: 0px;
                     }
-                    @media (max-width: 350px){
+                    @media (max-width: 350px) {
                         font-size: 0.5rem;
                     }
                 }
@@ -107,12 +107,12 @@
                     position: absolute;
                     right: 23px;
                     bottom: 32px;
-                    @media (max-width: 429px){
+                    @media (max-width: 429px) {
                         right: 20px;
                         bottom: 16px;
                         font-size: 0.5rem;
                     }
-                    @media (max-width: 350px){
+                    @media (max-width: 350px) {
                         font-size: 0.5rem;
                     }
                 }
