--- a/public/css/frontend/about/index.css
+++ b/public/css/frontend/about/index.css
@@ -6,6 +6,7 @@
 }
 .content-page-header h1 {
   color: #55473f;
+  font-weight: bold;
   font-size: 2.5rem;
   letter-spacing: 15px;
   display: inline-block;
@@ -192,6 +193,7 @@
   text-align: center;
   font-size: 1.3rem;
   font-weight: bold;
+  color: #55473f;
   letter-spacing: 3px;
   margin: 0;
 }
