--- a/public/css/frontend/announcements/index.css
+++ b/public/css/frontend/announcements/index.css
@@ -6,6 +6,7 @@
 }
 .content-page-header h1 {
   color: #55473f;
+  font-weight: bold;
   font-size: 2.5rem;
   letter-spacing: 15px;
   display: inline-block;
@@ -231,6 +232,7 @@
 }
 .announcement-container .announcement-row .announcement-link .announcement-info-container .announcement-date {
   display: inline-block;
+  font-weight: bold;
   letter-spacing: 3px;
   margin-right: 20px;
 }
@@ -241,6 +243,7 @@
 }
 .announcement-container .announcement-row .announcement-link .announcement-info-container .announcement-title {
   display: inline-block;
+  font-weight: bold;
   letter-spacing: 5px;
 }
 @media (max-width: 1199px) {
