--- a/public/css/frontend/announcements/show.css
+++ b/public/css/frontend/announcements/show.css
@@ -6,6 +6,7 @@
 }
 .content-page-header h1 {
   color: #55473f;
+  font-weight: bold;
   font-size: 2.5rem;
   letter-spacing: 15px;
   display: inline-block;
