--- a/public/css/frontend/donors/show.css
+++ b/public/css/frontend/donors/show.css
@@ -6,6 +6,7 @@
 }
 .content-page-header h1 {
   color: #55473f;
+  font-weight: bold;
   font-size: 2.5rem;
   letter-spacing: 15px;
   display: inline-block;
@@ -170,6 +171,7 @@
 }
 .content-page-body .container .donor-show-container .title-rows {
   font-size: 1.3rem;
+  color: #55473f;
   font-weight: bold;
   margin-bottom: 55px;
 }
