--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -5,6 +5,7 @@
     background-color: $white;
     h1 {
         color: $brown;
+        font-weight: bold;
         font-size: 2.5rem;
         letter-spacing: 15px;
         display: inline-block;
