--- a/resources/sass/frontend/about/index.scss
+++ b/resources/sass/frontend/about/index.scss
@@ -47,6 +47,7 @@
             text-align: center;
             font-size: 1.3rem;
             font-weight: bold;
+            color: $brown;
             letter-spacing: 3px;
             margin: 0;
             p {
