--- a/resources/sass/frontend/books/index.scss
+++ b/resources/sass/frontend/books/index.scss
@@ -1,8 +1,7 @@
 @import "../variables";
 @import "../contents";
 @import "../filter";
-
-.filter-row{
+.filter-row {
     @media (max-width: 991px) {
         margin-bottom: 60px;
     }
@@ -18,6 +17,7 @@
     }
     .book-card {
         width: calc(100%);
+        height: 365px;
         margin-bottom: 50px;
         border: 1px solid $blue;
         border-radius: 50px;
