--- a/resources/sass/frontend/_variables.scss
+++ b/resources/sass/frontend/_variables.scss
@@ -3,7 +3,7 @@ $navbar-base-height: 100px;
 // sidebar 寬度
 $navbar-lg-width: 460px;
 // footer 高度
-$footer-height: 200px;
+$footer-height: 220px;
 // 封面圖寬高，比例為1:2。
 $cover-width: 1920px;
 $cover-height: 960px;
@@ -23,8 +23,9 @@ $green: #93e5b4;
 $blue: #5f6b82;
 $pink: #f4ac9e;
 $brown: #55473f;
-
 // 字體設定
-$font-family-sans-serif: 'Noto Serif TC', 'Microsoft JhengHei', sans-serif;
+$font-family-sans-serif: 'Noto Serif TC',
+'Microsoft JhengHei',
+sans-serif;
 $font-size: 18px;
 $line-height-base: 1.6;
