--- a/resources/sass/frontend/activities/show.scss
+++ b/resources/sass/frontend/activities/show.scss
@@ -30,13 +30,10 @@
             position: relative;
             h1 {
                 color: $brown;
-                font-size: 2.2rem;
+                font-size: 1.8rem;
                 letter-spacing: 10px;
                 display: inline-block;
                 font-weight: bold;
-                @media (max-width: 767px) {
-                    font-size: 1.8rem;
-                }
                 @media (max-width: 767px) {
                     font-size: 1.5rem;
                 }
@@ -47,15 +44,22 @@
                 right: 0;
                 bottom: 5px;
                 margin: 0;
-                @media (max-width: 991px) {
+                @media (max-width: 1110px) {
                     width: 20%;
+                }
+                @media (max-width: 991px) {
+                    width: 22%;
                 }
                 @media (max-width: 767px) {
                     width: 20%;
                     right: -10px;
                 }
-                @media (max-width: 575px) {
+                @media (max-width: 716px) {
                     width: 25%;
+                    right: -10px;
+                }
+                @media (max-width: 575px) {
+                    width: 30%;
                 }
                 @media (max-width: 420px) {
                     width: 30%;
@@ -101,7 +105,7 @@
             .activity-detail-title-content {
                 text-align: left;
                 position: relative;
-                width: calc(100% - 15%);
+                width: 60%;
                 float: left;
                 margin: 0;
                 @media (max-width: 767px) {
