--- a/public/css/frontend/announcements/index.css
+++ b/public/css/frontend/announcements/index.css
@@ -153,8 +153,8 @@
   }
 }
 
-.content-page-body {
-  min-width: 768px !important;
+.content-page-body .container {
+  overflow-x: scroll;
 }
 @media (max-width: 767px) {
   .content-page-body .container {
@@ -169,6 +169,12 @@
 @media (max-width: 991px) {
   .announcement-container {
     padding: 60px 50px;
+  }
+}
+@media (max-width: 767px) {
+  .announcement-container {
+    min-width: 768px;
+    padding: 30px 0px 0px;
   }
 }
 .announcement-container .announcement-row {
