--- a/public/css/frontend/donors/index.css
+++ b/public/css/frontend/donors/index.css
@@ -209,9 +209,6 @@
   margin-bottom: 45px;
 }
 
-.content-page-body {
-  min-width: 768px !important;
-}
 @media (max-width: 991px) {
   .content-page-body .rwd-container {
     max-width: 800px !important;
@@ -220,6 +217,7 @@
 @media (max-width: 767px) {
   .content-page-body .container {
     max-width: initial;
+    padding: 0;
   }
 }
 
@@ -228,10 +226,24 @@
   border: 25px solid #93e5b4;
   padding: 60px 30px 30px;
 }
+@media (max-width: 767px) {
+  .donor-container {
+    width: 100%;
+    overflow-x: scroll;
+    margin: 0px 0px 20px;
+    padding: 0px 0px 20px 0px;
+  }
+}
 .donor-container .donor-table {
   display: flex;
   flex-flow: column nowrap;
   width: 100%;
+}
+@media (max-width: 767px) {
+  .donor-container .donor-table {
+    min-width: 768px;
+    padding: 30px 0px 0px;
+  }
 }
 .donor-container .donor-table .donor-row {
   display: flex;
