--- a/public/css/frontend/donors/show.css
+++ b/public/css/frontend/donors/show.css
@@ -149,7 +149,6 @@
 }
 
 .content-page-body {
-  min-width: 768px !important;
   height: 1200px;
   padding: 0px 0px 60px 0px;
 }
@@ -159,6 +158,7 @@
 @media (max-width: 767px) {
   .content-page-body .container {
     max-width: initial;
+    overflow-x: scroll;
   }
 }
 .content-page-body .container .donor-show-container {
@@ -168,6 +168,11 @@
   background-position: bottom;
   background-size: 100% 100%;
   padding: 110px 60px;
+}
+@media (max-width: 767px) {
+  .content-page-body .container .donor-show-container {
+    min-width: 768px;
+  }
 }
 .content-page-body .container .donor-show-container .title-rows {
   font-size: 1.3rem;
