--- a/public/css/frontend/frontend.css
+++ b/public/css/frontend/frontend.css
@@ -12359,11 +12359,13 @@ header .bg_cover .coverText span {
 #activity .base-area .base-content.activity-content .activity-unit-container {
   width: 50%;
   height: 100%;
+  height: -webkit-calc(100%);
 }
 @media (max-width: 1199px) {
   #activity .base-area .base-content.activity-content .activity-unit-container {
     width: 100%;
-    height: 50%;
+    height: 293px;
+    height: -webkit-calc(348px - 55px);
   }
 }
 #activity .base-area .base-content.activity-content .activity-unit-container.left-side .activity-unit {
