--- a/resources/sass/frontend/_activity.scss
+++ b/resources/sass/frontend/_activity.scss
@@ -131,9 +131,13 @@
                 .activity-unit-container {
                     width: 50%;
                     height: 100%;
+                    height: -moz-calc(100%);
+                    height: -webkit-calc(100%);
                     @media (max-width: 1199px) {
                         width: 100%;
-                        height: 50%;
+                        height: 348px - 55px;
+                        height: -moz-calc(348px - 55px);
+                        height: -webkit-calc(348px - 55px);
                     }
                     &.left-side {
                         // 這裡是左邊大顆的活動
