--- a/resources/sass/frontend/announcements/index.scss
+++ b/resources/sass/frontend/announcements/index.scss
@@ -15,8 +15,9 @@
 }
 
 .content-page-body {
-    min-width: 768px !important;
+    // min-width: 768px !important;
     .container {
+        overflow-x: scroll;
         @media (max-width: 767px) {
             max-width: initial;
         }
@@ -28,6 +29,10 @@
     padding: 100px 100px 50px;
     @media (max-width: 991px) {
         padding: 60px 50px;
+    }
+    @media (max-width: 767px) {
+        min-width: 768px;
+        padding: 30px 0px 0px;
     }
     .announcement-row {
         background-image: url('../../../images/frontend/icons/news_underline.png');
