--- a/resources/sass/frontend/donors/index.scss
+++ b/resources/sass/frontend/donors/index.scss
@@ -6,7 +6,7 @@
 }
 
 .content-page-body {
-    min-width: 768px !important;
+    // min-width: 768px !important;
     .rwd-container {
         @media (max-width: 991px) {
             max-width: 800px !important;
@@ -15,6 +15,7 @@
     .container {
         @media (max-width: 767px) {
             max-width: initial;
+            padding: 0;
         }
     }
 }
@@ -23,10 +24,20 @@
     background-color: $white;
     border: 25px solid $green;
     padding: 60px 30px 30px;
+    @media (max-width: 767px) {
+        width: 100%;
+        overflow-x: scroll;
+        margin: 0px 0px 20px;
+        padding: 0px 0px 20px 0px;
+    }
     .donor-table {
         display: flex;
         flex-flow: column nowrap;
         width: 100%;
+        @media (max-width: 767px) {
+            min-width: 768px;
+            padding: 30px 0px 0px;
+        }
         .donor-row {
             display: flex;
             flex-flow: row nowrap;
