--- a/resources/sass/frontend/donors/show.scss
+++ b/resources/sass/frontend/donors/show.scss
@@ -6,13 +6,14 @@
 }
 
 .content-page-body {
-    min-width: 768px !important;
+    // min-width: 768px !important;
     height: 1200px;
     padding: 0px 0px 60px 0px;
     .container {
         height: 100%;
         @media (max-width: 767px) {
             max-width: initial;
+            overflow-x: scroll;
         }
         .donor-show-container {
             height: 90%;
@@ -21,6 +22,9 @@
             background-position: bottom;
             background-size: 100% 100%;
             padding: 110px 60px;
+            @media (max-width: 767px) {
+                min-width: 768px;
+            }
             .title-rows {
                 font-size: 1.3rem;
                 color: $brown;
